--- a/Titan_macOS/Titan_macOS/Titan_macOS.entitlements
+++ b/Titan_macOS/Titan_macOS/Titan_macOS.entitlements
@@ -3,6 +3,10 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.security.app-sandbox</key>
-	<true/>
+	<false/>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.fe.nghiatran.TitanMacOS</string>
+	</array>
 </dict>
 </plist>
